--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <th class="tg-2thk"></th>
     <th class="tg-u1yq">DOWNLOAD SPEED </th>
     <th class="tg-u1yq">UPLOAD SPEED</th>
-    <th class="tg-baqh" rowspan="3"><a href="https://www.iotatel.com/"><img src="images/Iotatel_Logo_Shadow_Black.png" alt="Iotatel" style="width:350px;"></a></th>
+    <th class="tg-baqh" rowspan="3"><img src="images/Iotatel_Logo_Shadow_Black.png" alt="Iotatel" style="width:350px;"></th>
   </tr>
   <tr>
     <td class="tg-ipa1">MAX</td>
