--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <td class="tg-6nwz">0.6 Mbps</td>
   </tr>
 </table>
+Testy
 
         <script src="resources/qgis2web_expressions.js"></script>
         <script src="resources/polyfills.js"></script>
