--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <td class="tg-6nwz">0.6 Mbps</td>
   </tr>
 </table>
-<a href="downloads/China_Creek_Pre_Upgrade.kml">Download the large document</a>
+<a href="downloads/China_Creek_Pre_Upgrade.kml">Download a .kml file</a>
 
         <script src="resources/qgis2web_expressions.js"></script>
         <script src="resources/polyfills.js"></script>
