--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
   </tr>
 </table>
 <a href="downloads/China_Creek_Pre_Upgrade.kml">Click here to download a .kml file for Google Earth</a>
+<a href="downloads/RSSI_heatmap.tif">Click here to download a .tif of the heat map for Google Earth</a>
 
         <script src="resources/qgis2web_expressions.js"></script>
         <script src="resources/polyfills.js"></script>
