--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <p style="font-size:36px;">Island Timberlands Sites</p>
 
-<p><a href="customer-maps/ChinaCreek.html">China Creek</a></p>
+<p><a href="https://trrhodes.github.io/customer-maps/ChinaCreek">China Creek</a></p>
 <p><a href="https://www.w3schools.com/html/">Island Terminals</a></p>
 
 
