--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <p style="font-size:36px;">Island Timberlands Sites</p>
 
 <p><a href="https://trrhodes.github.io/customer-maps/ChinaCreek">China Creek</a></p>
-<p><a href="https://www.w3schools.com/html/">Island Terminals</a></p>
+<p><a href="https://trrhodes.github.io/customer-maps/Island_Terminals/IslandTerminals.html">Island Terminals</a></p>
 
 
 </body>
