--- a/Island_Terminals/IslandTerminals.html
+++ b/Island_Terminals/IslandTerminals.html
@@ -14,7 +14,7 @@
         <style>
         html, body, #map {
             width: 100%;
-            height: 80%;
+            height: 90%;
             padding: 0;
             margin: 0;
         }
@@ -168,7 +168,7 @@
         setBounds();
         </script>
         <!--ADDED STUFF HERE-->
-        <h1>China Creek DLS Pre-upgrade Survey</h1>
+        <h1>Island Terminals Pre-upgrade Survey</h1>
 
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;border:none;}
@@ -183,21 +183,21 @@
 </style>
 <table class="tg">
   <tr>
-    <th class="tg-i81m" rowspan="3"><img src="images/Legend.png" alt="Legend"></th>
+    <th class="tg-i81m" rowspan="3"><img src="https://trrhodes.github.io/customer-maps/images/Legend.png" alt="Legend"></th>
     <th class="tg-2thk"></th>
     <th class="tg-u1yq">DOWNLOAD SPEED </th>
     <th class="tg-u1yq">UPLOAD SPEED</th>
-    <th class="tg-baqh" rowspan="3"><img src="images/Iotatel_Logo_Shadow_Black.png" alt="Iotatel" style="width:350px;"></th>
+    <th class="tg-baqh" rowspan="3"><img src="https://trrhodes.github.io/customer-maps/images/Iotatel_Logo_Shadow_Black.png" alt="Iotatel" style="width:350px;"></th>
   </tr>
   <tr>
     <td class="tg-ipa1">MAX</td>
-    <td class="tg-6nwz">12.7 Mbps</td>
-    <td class="tg-6nwz">1.5 Mbps</td>
+    <td class="tg-6nwz">? Mbps</td>
+    <td class="tg-6nwz">? Mbps</td>
   </tr>
   <tr>
     <td class="tg-ipa1">AVERAGE</td>
-    <td class="tg-6nwz">5.4 Mbps</td>
-    <td class="tg-6nwz">0.6 Mbps</td>
+    <td class="tg-6nwz">? Mbps</td>
+    <td class="tg-6nwz">? Mbps</td>
   </tr>
 </table>
 <a href="downloads/China_Creek_Pre_Upgrade.kml">Click here to download a .kml file for Google Earth</a>
