fixed broken image links

--- a/China_Creek/ChinaCreek.html
+++ b/China_Creek/ChinaCreek.html
@@ -87,11 +87,11 @@
 </style>
 <table class="tg">
   <tr>
-    <th class="tg-i81m" rowspan="3"><img src="images/Legend.png" alt="Legend"></th>
+    <th class="tg-i81m" rowspan="3"><img src="https://trrhodes.github.io/customer-maps/images/Legend.png" alt="Legend"></th>
     <th class="tg-2thk"></th>
     <th class="tg-u1yq">DOWNLOAD SPEED </th>
     <th class="tg-u1yq">UPLOAD SPEED</th>
-    <th class="tg-baqh" rowspan="3"><img src="images/Iotatel_Logo_Shadow_Black.png" alt="Iotatel" style="width:350px;"></th>
+    <th class="tg-baqh" rowspan="3"><img src="https://trrhodes.github.io/customer-maps/images/Legend.png" alt="Iotatel" style="width:350px;"></th>
   </tr>
   <tr>
     <td class="tg-ipa1">MAX</td>
