--- a/Island_Terminals/IslandTerminals.html
+++ b/Island_Terminals/IslandTerminals.html
@@ -169,37 +169,9 @@
         </script>
         <!--ADDED STUFF HERE-->
         <h1>Island Terminals Pre-upgrade Survey</h1>
+        <img src="https://trrhodes.github.io/customer-maps/images/Legend.png" alt="Legend">
 
-<style type="text/css">
-.tg  {border-collapse:collapse;border-spacing:0;border:none;}
-.tg td{font-family:Arial, sans-serif;font-size:14px;padding:5px 10px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;}
-.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:5px 10px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;}
-.tg .tg-2thk{background-color:#c0c0c0;text-align:center}
-.tg .tg-baqh{text-align:center;vertical-align:top}
-.tg .tg-ipa1{font-weight:bold;background-color:#c0c0c0;text-align:center}
-.tg .tg-i81m{background-color:#ffffff;text-align:center;vertical-align:top}
-.tg .tg-u1yq{font-weight:bold;background-color:#c0c0c0;text-align:center;vertical-align:top}
-.tg .tg-6nwz{font-size:14px;text-align:center;vertical-align:top}
-</style>
-<table class="tg">
-  <tr>
-    <th class="tg-i81m" rowspan="3"><img src="https://trrhodes.github.io/customer-maps/images/Legend.png" alt="Legend"></th>
-    <th class="tg-2thk"></th>
-    <th class="tg-u1yq">DOWNLOAD SPEED </th>
-    <th class="tg-u1yq">UPLOAD SPEED</th>
-    <th class="tg-baqh" rowspan="3"><img src="https://trrhodes.github.io/customer-maps/images/Iotatel_Logo_Shadow_Black.png" alt="Iotatel" style="width:350px;"></th>
-  </tr>
-  <tr>
-    <td class="tg-ipa1">MAX</td>
-    <td class="tg-6nwz">? Mbps</td>
-    <td class="tg-6nwz">? Mbps</td>
-  </tr>
-  <tr>
-    <td class="tg-ipa1">AVERAGE</td>
-    <td class="tg-6nwz">? Mbps</td>
-    <td class="tg-6nwz">? Mbps</td>
-  </tr>
-</table>
+
 <a href="downloads/China_Creek_Pre_Upgrade.kml">Click here to download a .kml file for Google Earth</a>
         &nbsp;&nbsp;&nbsp;&nbsp;
 <a href="downloads/RSSI_heatmap.tif">Click here to download a .tif of the heat map for Google Earth</a>
@@ -207,3 +179,5 @@
         <!--TO HERE-->
     </body>
 </html>
+
+
