--- a/Island_Terminals/IslandTerminals.html
+++ b/Island_Terminals/IslandTerminals.html
@@ -168,13 +168,15 @@
         setBounds();
         </script>
         <!--ADDED STUFF HERE-->
+        <img src="https://trrhodes.github.io/customer-maps/images/Legend.png" alt="Legend"
+        style="float:right;">
         <h1>Island Terminals Pre-upgrade Survey</h1>
-        <img src="https://trrhodes.github.io/customer-maps/images/Legend.png" alt="Legend">
 
+        <h2>Files for download</h2>
 
-<a href="downloads/China_Creek_Pre_Upgrade.kml">Click here to download a .kml file for Google Earth</a>
-        &nbsp;&nbsp;&nbsp;&nbsp;
-<a href="downloads/RSSI_heatmap.tif">Click here to download a .tif of the heat map for Google Earth</a>
+<ul>
+  <li><a href="file.doc">Download!</a></li>
+</ul>  
 
         <!--TO HERE-->
     </body>
