added lists of files and organized folders

--- a/China_Creek/ChinaCreek.html
+++ b/China_Creek/ChinaCreek.html
@@ -104,9 +104,9 @@
     <td class="tg-6nwz">0.6 Mbps</td>
   </tr>
 </table>
-<a href="downloads/China_Creek_Pre_Upgrade.kml">Click here to download a .kml file for Google Earth</a>
+<a href="downloads/China Creek/China_Creek_Pre_Upgrade.kml">Click here to download a .kml file for Google Earth</a>
         &nbsp;&nbsp;&nbsp;&nbsp;
-<a href="downloads/RSSI_heatmap.tif">Click here to download a .tif of the heat map for Google Earth</a>
+<a href="downloads/China Creek/RSSI_heatmap.tif">Click here to download a .tif of the heat map for Google Earth</a>
 
         <script src="resources/qgis2web_expressions.js"></script>
         <script src="resources/polyfills.js"></script>
