--- a/Island_Terminals/IslandTerminals.html
+++ b/Island_Terminals/IslandTerminals.html
@@ -175,7 +175,10 @@
         <h2>Files for download</h2>
 
 <ul>
-  <li><a href="file.doc">Download!</a></li>
+  <li><a href="downloads/Island Terminals/Pre_upgrade_points.shp">Download!</a></li>
+  <li><a href="downloads/Island Terminals/Pre_upgrade_points.kml">Download!</a></li>
+  <li><a href="downloads/Island Terminals/Island_Terminals_TIN.tif">Download!</a></li>
+  <li><a href="downloads/Island Terminals/Wireless_guns_TIN.tif">Download!</a></li>
 </ul>  
 
         <!--TO HERE-->
