added full path to download links

--- a/Island_Terminals/IslandTerminals.html
+++ b/Island_Terminals/IslandTerminals.html
@@ -175,10 +175,10 @@
         <h2>Files for download</h2>
 
 <ul>
-  <li><a href="downloads/Island Terminals/Pre_upgrade_points.shp">Pre_upgrade_points.shp</a></li>
-  <li><a href="downloads/Island Terminals/Pre_upgrade_points.kml">Pre_upgrade_points.kml</a></li>
-  <li><a href="downloads/Island Terminals/Island_Terminals_TIN.tif">Island_Terminals_TIN.tif</a></li>
-  <li><a href="downloads/Island Terminals/Wireless_guns_TIN.tif">Wireless_guns_TIN.tif</a></li>
+  <li><a href="https://trrhodes.github.io/customer-maps/downloads/Island Terminals/Pre_upgrade_points.shp">Pre_upgrade_points.shp</a></li>
+  <li><a href="https://trrhodes.github.io/customer-maps/downloads/Island Terminals/Pre_upgrade_points.kml">Pre_upgrade_points.kml</a></li>
+  <li><a href="https://trrhodes.github.io/customer-maps/downloads/Island Terminals/Island_Terminals_TIN.tif">Island_Terminals_TIN.tif</a></li>
+  <li><a href="https://trrhodes.github.io/customer-maps/downloads/Island Terminals/Wireless_guns_TIN.tif">Wireless_guns_TIN.tif</a></li>
 </ul>  
 
         <!--TO HERE-->
