added icon images

--- a/China_Creek/ChinaCreek.html
+++ b/China_Creek/ChinaCreek.html
@@ -104,6 +104,9 @@
     <td class="tg-6nwz">0.6 Mbps</td>
   </tr>
 </table>
+
+customer-maps/downloads/China Creek/China_Creek_Pre_Upgrade.kml
+
 <a href="https://trrhodes.github.io/customer-maps/downloads/China Creek/China_Creek_Pre_Upgrade.kml">Click here to download a .kml file for Google Earth</a>
         &nbsp;&nbsp;&nbsp;&nbsp;
 <a href="https://trrhodes.github.io/customer-maps/downloads/China Creek/RSSI_heatmap.tif">Click here to download a .tif of the heat map for Google Earth</a>
