--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 <p><a href="https://trrhodes.github.io/customer-maps/China_Creek/ChinaCreek.html">China Creek</a></p>
 <p><a href="https://trrhodes.github.io/customer-maps/Island_Terminals/IslandTerminals.html">Island Terminals</a></p>
 
+<p>
+China Creek Dry Land Sort<br /> <a href="https://trrhodes.github.io/customer-maps/China_Creek/ChinaCreek.html">
+<img border="0" alt="China Creek Dry Land Sort" src="https://trrhodes.github.io/customer-maps/images/China_creek_icon.png" width="300">
+</a>
+</p>
+
 
 </body>
 </html>
