--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 China Creek Dry Land Sort<br /> <a href="https://trrhodes.github.io/customer-maps/China_Creek/ChinaCreek.html">
 <img border="0" alt="China Creek Dry Land Sort" src="https://trrhodes.github.io/customer-maps/images/China_creek_icon.png" width="300">
 </a>
+Island Terminal Log Export Facility<br /> <a href="https://trrhodes.github.io/customer-maps/Island_Terminals/IslandTerminals.html">
+<img border="0" alt="Island Terminal Log Export Facility" src="https://trrhodes.github.io/customer-maps/images/Island_terminals_icon.png" width="300">
+</a>
+
 </p>
 
 
