--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+<style>
+
+h1 {
+    font-size: 250%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h2 {
+    font-size: 150%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+p {
+    font-size: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+</style>
+</head>
+
 <body>
 
-<p style="font-size:36px;">Island Timberlands Sites</p>
+<h1>Island Timberlands Sites</h1>
 
-<p><a href="https://trrhodes.github.io/customer-maps/China_Creek/ChinaCreek.html">China Creek</a></p>
-<p><a href="https://trrhodes.github.io/customer-maps/Island_Terminals/IslandTerminals.html">Island Terminals</a></p>
-
-<p>
-China Creek Dry Land Sort<br /> <a href="https://trrhodes.github.io/customer-maps/China_Creek/ChinaCreek.html">
-<img border="0" alt="China Creek Dry Land Sort" src="https://trrhodes.github.io/customer-maps/images/China_creek_icon.png" width="300">
+<p class="one">
+<h2>China Creek Dry Land Sort</h2> <a href="https://trrhodes.github.io/customer-maps/China_Creek/ChinaCreek.html">
+<img alt="China Creek Dry Land Sort" src="https://trrhodes.github.io/customer-maps/images/China_creek_icon.png" width="600">
 </a>
-Island Terminal Log Export Facility<br /> <a href="https://trrhodes.github.io/customer-maps/Island_Terminals/IslandTerminals.html">
-<img border="0" alt="Island Terminal Log Export Facility" src="https://trrhodes.github.io/customer-maps/images/Island_terminals_icon.png" width="300">
+<br /> <br />
+
+<h2>Island Terminals Log Export Facility<h2/> <a href="https://trrhodes.github.io/customer-maps/Island_Terminals/IslandTerminals.html">
+<img alt="Island Terminal Log Export Facility" src="https://trrhodes.github.io/customer-maps/images/Island_terminals_icon.png" width="600">
 </a>
 
 </p>
