--- a/Island_Terminals/IslandTerminals.html
+++ b/Island_Terminals/IslandTerminals.html
@@ -12,6 +12,23 @@
         <link rel="stylesheet" href="css/MarkerCluster.Default.css" />
         <link rel="stylesheet" href="css/leaflet-measure.css" />
         <style>
+
+        h1 {
+            font-size: 250%;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        h2 {
+            font-size: 150%;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        p {
+            font-size: 100%;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+
         html, body, #map {
             width: 100%;
             height: 90%;
