fixed font in list

--- a/Island_Terminals/IslandTerminals.html
+++ b/Island_Terminals/IslandTerminals.html
@@ -28,6 +28,11 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
+        li {
+            font-size: 100%;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
 
         html, body, #map {
             width: 100%;
@@ -190,7 +195,6 @@
         <h1>Island Terminals Pre-upgrade Survey</h1>
 
         <h2>Files for download</h2>
-
 <ul>
   <li><a href="https://trrhodes.github.io/customer-maps/downloads/Island Terminals/Pre_upgrade_points.shp">Pre_upgrade_points.shp</a></li>
   <li><a href="https://trrhodes.github.io/customer-maps/downloads/Island Terminals/Pre_upgrade_points.kml">Pre_upgrade_points.kml</a></li>
