changed download icon

--- a/China_Creek/ChinaCreek.html
+++ b/China_Creek/ChinaCreek.html
@@ -23,11 +23,11 @@ p {
 
 <body>
 
-<h1>Island Timberlands Sites</h1>
+<h1>China Creek Dry Land Sort</h1>
 
 <p class="one">
 <h2>Post Upgrade Land Survey</h2> <a href="https://trrhodes.github.io/customer-maps/downloads/China Creek/ChinaCreek_Post_Upgrade_LAND.pdf">
-<img alt="China Creek Dry Land Sort" src="https://trrhodes.github.io/customer-maps/images/China_creek_icon.png" width="400">
+<img alt="China Creek Dry Land Sort" src="https://trrhodes.github.io/customer-maps/images/PDF_icon.png" width="400">
 </a>
 <br /> <br />
 
