--- a/China_Creek/ChinaCreek.html
+++ b/China_Creek/ChinaCreek.html
@@ -26,8 +26,14 @@ p {
 <h1>China Creek Dry Land Sort</h1>
 
 <p class="one">
-<h2>Post Upgrade Land Survey</h2> <a href="https://trrhodes.github.io/customer-maps/downloads/China Creek/ChinaCreek_Post_Upgrade_LAND.pdf">
-<img alt="China Creek Dry Land Sort" src="https://trrhodes.github.io/customer-maps/images/PDF_icon.png" width="400">
+<h2>Pre-Upgrade Land Survey</h2> <a href="https://trrhodes.github.io/customer-maps/downloads/China Creek/ChinaCreek_Pre_Upgrade.pdf">
+<img alt="China Creek Dry Land Sort" src="https://trrhodes.github.io/customer-maps/images/PDF_icon.png" width="200">
+</a>
+<br /> <br />
+
+<p class="one">
+<h2>Post-Upgrade Land Survey</h2> <a href="https://trrhodes.github.io/customer-maps/downloads/China Creek/ChinaCreek_Post_Upgrade_LAND.pdf">
+<img alt="China Creek Dry Land Sort" src="https://trrhodes.github.io/customer-maps/images/PDF_icon.png" width="200">
 </a>
 <br /> <br />
 
