fixed broken link in island termninals

--- a/Island_Terminals/IslandTerminals.html
+++ b/Island_Terminals/IslandTerminals.html
@@ -200,8 +200,8 @@
   <li><a href="https://trrhodes.github.io/customer-maps/downloads/Island Terminals/Pre_upgrade_points.kml">Pre_upgrade_points.kml</a></li>
   <li><a href="https://trrhodes.github.io/customer-maps/downloads/Island Terminals/Island_Terminals_TIN.tif">Island_Terminals_TIN.tif</a></li>
   <li><a href="https://trrhodes.github.io/customer-maps/downloads/Island Terminals/Wireless_guns_TIN.tif">Wireless_guns_TIN.tif</a></li>
-  <li><a href="https://trrhodes.github.io/customer-maps/downloads/WIRELESS_GUNS.pdf">WIRELESS_GUNS.pdf</a></li>
-  <li><a href="https://trrhodes.github.io/customer-maps/downloads/Island Terminals.pdf">Island Terminals.pdf</a></li>
+  <li><a href="https://trrhodes.github.io/customer-maps/downloads/Island Terminals/WIRELESS_GUNS.pdf">WIRELESS_GUNS.pdf</a></li>
+  <li><a href="https://trrhodes.github.io/customer-maps/downloads/IIsland Terminals/sland Terminals.pdf">Island Terminals.pdf</a></li>
 </ul>  
 
         <!--TO HERE-->
