uploaded pdf that has distance indicators

--- a/China_Creek/ChinaCreek.html
+++ b/China_Creek/ChinaCreek.html
@@ -37,6 +37,12 @@ p {
 </a>
 <br /> <br />
 
+<p class="one">
+<h2>Complete Post-Upgrade Survey (with distance indicators) </h2> <a href="https://trrhodes.github.io/customer-maps/downloads/China Creek/ChinaCreek_post_upgrade_w_scale.pdf">
+<img alt="China Creek Dry Land Sort" src="https://trrhodes.github.io/customer-maps/images/PDF_icon.png" width="200">
+</a>
+<br /> <br />
+
 </p>
 
 
