removed all the olf file links

--- a/Island_Terminals/IslandTerminals.html
+++ b/Island_Terminals/IslandTerminals.html
@@ -196,12 +196,7 @@
 
         <h2>Files for download</h2>
 <ul>
-  <li><a href="https://trrhodes.github.io/customer-maps/downloads/Island Terminals/Pre_upgrade_points.shp">Pre_upgrade_points.shp</a></li>
-  <li><a href="https://trrhodes.github.io/customer-maps/downloads/Island Terminals/Pre_upgrade_points.kml">Pre_upgrade_points.kml</a></li>
-  <li><a href="https://trrhodes.github.io/customer-maps/downloads/Island Terminals/Island_Terminals_TIN.tif">Island_Terminals_TIN.tif</a></li>
-  <li><a href="https://trrhodes.github.io/customer-maps/downloads/Island Terminals/Wireless_guns_TIN.tif">Wireless_guns_TIN.tif</a></li>
-  <li><a href="https://trrhodes.github.io/customer-maps/downloads/Island Terminals/WIRELESS_GUNS.pdf">WIRELESS_GUNS.pdf</a></li>
-  <li><a href="https://trrhodes.github.io/customer-maps/downloads/Island Terminals/Pre_and_post_upgrade.pdf">Island Terminals.pdf</a></li>
+  <li><a href="https://trrhodes.github.io/customer-maps/downloads/Island Terminals/Pre_and_post_upgrade.pdf">Pre_and_post_upgrade.pdf</a></li>
 </ul>  
 
         <!--TO HERE-->
